--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1></h1>
         <nav>
             <a target="blank" href="MUKIYA EDAM.html" class="more-link">Home&nbsp;</a>
-            <a target="blank" href="404 Error.html" class="more-link">About&nbsp;</a>
-            <a target="blank" href="404 Error.html"class="more-link">content&nbsp;</a>
+            <a target="blank" href="index.html" class="more-link">About&nbsp;</a>
+            <a target="blank" href="index.html"class="more-link">content&nbsp;</a>
             <a target="blank" href="register.html"class="more-link">register&nbsp;</a>
         </nav>
     </header>
